# codex

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/backend-proxy/: Cargo.toml
codex-rs/backend-proxy/docs/: backend-api.md  backend-cross-eval.md  debug-v2.md  debug-v3.md  debug.md  design-v1.md  design-v2.md  design-v3.md  plan-v1.md
codex-rs/backend-proxy/src/: lib.rs  main.rs
codex-rs/backend-proxy/src/support/: auth_loader.rs  headers.rs  logging.rs  mod.rs  router.rs  translate.rs  utils.rs
